# etf-momentum

./: .dockerignore  .gitignore  .speccoding-state.json  AGENTS.md  Dockerfile  Dockerfile.frontend  Makefile  README.md  docker-compose.yml  main.py
backend/: .dockerignore  .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml  requirements-realtime.txt  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 8c872b9f6bda_initial_schema.py  a1b2c3d4e5f6_signal_snapshot_nullable_score_rank.py  b1c2d3e4f5a6_backtest_run_nav_series.py  c1d2e3f4a5b6_etf_pools.py
backend/app/: __init__.py  db.py  main.py  schemas.py  seed.py
backend/app/api/: backtest.py  configs.py  (+5 more)
backend/scripts/: generate_fixtures.py
backend/tests/: _jq_shim.py  conftest.py  test_akshare_client.py  test_akshare_source.py  test_api_backtest.py  test_api_cors.py  test_api_etfs.py  test_api_pools.py  test_api_schemas.py  test_api_signals.py  test_api_sync.py  test_backtest.py  test_backtest_engine.py  test_backtest_metrics.py  test_backtest_persistence.py  test_backtest_run.py  test_cached_source.py  test_codes.py  test_config.py  test_configs.py  test_daily_price.py  test_daily_prices_sync.py  test_daily_sync.py  test_dynamic_pool_api.py  test_dynamic_pool_model.py  test_engine_validation.py  test_etf.py  test_etf_master_sync.py  test_etfs_api.py  test_fixture_source.py  test_health.py  test_health_stats.py  test_make_source.py  test_market_api.py  test_market_bar_cache.py  test_momentum.py  test_portfolio_cash.py  test_portfolio_db.py  test_retry.py  test_screening.py  (+17 more)
(+351 files in other folders)
