[project]
name = "etf-momentum-backend"
version = "0.1.0"
description = "A 股 ETF 动量策略系统后端"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.18.5",
    "fastapi>=0.115.0",
    "greenlet>=3.5.2",
    "sqlalchemy>=2.0.51",
    "uvicorn[standard]>=0.32.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
